- update recipes - update events to work - create crafttweaker and kubejs support (kjs not working) - new recipe ("Infusing" with infusion stone)

--- a/src/main/resources/assets/skyseltweaks/lang/en_us.json
+++ b/src/main/resources/assets/skyseltweaks/lang/en_us.json
@@ -27,5 +27,5 @@
   "item.skyseltweaks.heavy_explosive_snowball": "Heavy Explosive Snowball",
   "item.skyseltweaks.mini_freezer": "Mini Freezer",
   "item.skyseltweaks.iron_freezer": "Iron Freezer",
-  "waila.freezer.progress": "Progress: %d"
+  "waila.freezer.progress": "Freezing: %d%%"
 }
